<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Tarnów"
        android:textColor="#009688"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="@+id/cityName"
        tools:layout_editor_absoluteX="0dp">

        <TableRow style="@style/table_row">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow style="@style/table_row_two">

                    <TextView
                        android:id="@+id/temperatureTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow style="@style/table_row_two">

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

            </TableLayout>
        </TableRow>

        <TableRow style="@style/table_row">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow style="@style/table_row_two">

                    <TextView
                        android:id="@+id/pressureTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow style="@style/table_row_two">

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

            </TableLayout>
        </TableRow>

        <TableRow style="@style/table_row">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow style="@style/table_row_two">

                    <TextView
                        android:id="@+id/humidityTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow style="@style/table_row_two">

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

            </TableLayout>
        </TableRow>

        <TableRow style="@style/table_row">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow style="@style/table_row_two">

                    <TextView
                        android:id="@+id/temperatureMinTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_min"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow style="@style/table_row_two">

                    <TextView
                        android:id="@+id/temperatureMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

            </TableLayout>
        </TableRow>

        <TableRow style="@style/table_row">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow style="@style/table_row_two">

                    <TextView
                        android:id="@+id/temperatureMaxTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature_max"
                        android:textSize="20dp" />
                </TableRow>

                <TableRow style="@style/table_row_two">

                    <TextView
                        android:id="@+id/temperatureMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

            </TableLayout>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>